fix: hero overflow

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -551,7 +551,8 @@ body {
 ******************** */
 .hero {
   position: relative;
-  min-height: calc(100vh - var(--header-height));
+  overflow: hidden;
+  height: calc(100vh - var(--header-height));
   color: var(--color-white);
   text-align: center;
   background-repeat: no-repeat;
