--- a/app/scss/layouts/_hero.scss
+++ b/app/scss/layouts/_hero.scss
@@ -4,7 +4,8 @@
 
 .hero{
     position: relative;
-    min-height: calc(100vh - var(--header-height));
+    overflow: hidden;
+    height: calc(100vh - var(--header-height));
     color: var(--color-white);
     text-align: center;
     background-repeat: no-repeat;
